syntax = "proto3";
package liveness;

option go_package = "./rpc/liveness";

// creating rpc server for node's liveness status
service Liveness {
    rpc Ping(LivePingMessage) returns (LivePingMessage) {}
    rpc ChangeStatus(LiveChangeStatusMessage) returns (LiveChangeStatusMessage) {}
}

// liveness messages
message LivePingMessage {
    int64 random = 1;
}

message LiveChangeStatusMessage {
    bool status = 1;
}
